--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
@@ -117,3 +119,16 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+// implementation project(':react-native-keyboard-controller')
+// implementation project(':react-native-vector-icons')
+// implementation project(':react-native-reanimated')
+// implementation project(':react-native-mmkv-storage')
+// implementation project(':react-native-gesture-handler')
+// implementation project(':react-native-safe-area-context')
+// implementation project(':react-native-linear-gradient')
+// implementation project(':react-native-screens')
+// implementation project(':react-native-worklets')
+
+
+
