--- a/package.json
+++ b/package.json
@@ -11,13 +11,26 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.82.1",
+    "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/elements": "^2.8.1",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "@reduxjs/toolkit": "^2.10.1",
+    "axios": "^1.13.2",
+    "jwt-decode": "^4.0.0",
+    "libphonenumber-js": "^1.12.26",
     "react": "19.1.1",
-    "react-native": "0.82.1",
+    "react-native": "^0.82.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.29.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv-storage": "^12.0.0",
+    "react-native-reanimated": "^4.1.5",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0"
+    "react-native-screens": "^4.18.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.6.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
